First round of gameplay completed, however needs to be reworked to keeptrack of score

--- a/index.html
+++ b/index.html
@@ -9,14 +9,41 @@
 <body>
         <script>
             //computerPlay function completed, generates the computer's random choice
-            let selection = ["Rock", "Paper", "Scissors"]
+            let selection = ["rock", "paper", "scissors"]
+            let playerScore = 0;
+            let computerScore = 0;
 
-            function computerPlay(selection) {
             let computerSelection = Math.floor(Math.random() * selection.length);
-            return computerSelection;
+            
+            console.log(computerSelection, selection[computerSelection]);
+
+            // initial round of gameplay. Prompt records player's choice, then it is compared with computer's choice and output is given
+            // will need to rework in order to keep track of score
+            let playerSelection = prompt("Rock, Paper or Scissors? Choose Wisely!").toLowerCase();
+
+            function gameResult(playerSelection, computerSelection){
+                if ((playerSelection === "rock") && (computerSelection == 0)){
+                return "Draw! You both chose Rock";
+                } else if ((playerSelection === "rock") && (computerSelection == 1)){
+                return "You lose! Paper beats Rock";
+                } else if ((playerSelection === "rock") && (computerSelection == 2)){
+                return "You win! Rock beats Scissors";
+                } else if ((playerSelection === "paper") && (computerSelection == 0)){
+                return "You win! Paper beats Rock";
+                } else if ((playerSelection === "paper") && (computerSelection == 1)){
+                return "Draw! You both chose Paper";
+                } else if ((playerSelection === "paper") && (computerSelection == 2)){
+                return "You Lose! Scissors beats Paper";
+                } else if ((playerSelection === "scissors") && (computerSelection == 0)){
+                return "You lose! Rock beats Scissors";
+                } else if ((playerSelection === "scissors") && (computerSelection == 1)){
+                return "You win! Scissors beats Paper";
+                } else if ((playerSelection === "scissors") && (computerSelection == 2)){
+                return "Draw! You both chose Scissors";
+                }
             }
 
-            console.log(computerPlay(selection), selection[computerPlay(selection)]);
+            console.log(gameResult(playerSelection, computerSelection));
 
         </script>
 </body>
